--- a/abc.html
+++ b/abc.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- 
+  <head>
     <title>Document</title>
-
-</head>
-<body>
-    <table>
-            
-    </table>
-
-
+  </head>
+  <body>
+    <table></table>
 
     <script src="scirpt.js"></script>
-</body>
+  </body>
 </html>
